Changes to use the idSequence instead of the idActivity in to acces the Spotting activities

--- a/src/main/webapp/teacher/teacherPage.xhtml
+++ b/src/main/webapp/teacher/teacherPage.xhtml
@@ -76,7 +76,7 @@
                 <p:button id="testCmdButton"
                           icon="img-button-test" title="Tester séquence" 
                           outcome="/sequence/activity/spottingActivity.xhtml">
-                    <f:param name="idActivity" value="#{sequence.idSpottingActivity}"/>
+                    <f:param name="idSequence" value="#{sequence.idSpottingActivity}"/>
                 </p:button>
                 <p:button id="testSysActButton"
                           icon="img-button-test" title="Tester activité de systematisation" 
