Correcting some grammar errors and messages

--- a/src/main/webapp/noLogin.xhtml
+++ b/src/main/webapp/noLogin.xhtml
@@ -4,7 +4,7 @@
                 template="./WEB-INF/templates/default.xhtml">
 
     <ui:define name="title">
-        title
+        Can't connect
     </ui:define>
 
     <ui:define name="content">
