Getting texts from the server
- Fixing a bug in folders with plus than 50 chars (Regenerate DB)
- Launching a exception to the view instead of saying « can’t connect »
- Fixing a surplus ‘’
- Adding some //@TODO’s

--- a/src/main/webapp/teacher/summary.xhtml
+++ b/src/main/webapp/teacher/summary.xhtml
@@ -140,7 +140,7 @@
                     <p:outputPanel id="seqKnowledgeApp" deferred="true"
                                    style="white-space: pre-line;
                                    word-break: break-all;">
-                        #{sequenceBean.knowledgeApp}"
+                        #{sequenceBean.knowledgeApp}
                     </p:outputPanel>
                 </h:panelGroup>
                 <h:panelGroup id="explicationPanel">
