Fixing a bug passing idSequence in TeachersPage

--- a/src/main/webapp/teacher/teacherPage.xhtml
+++ b/src/main/webapp/teacher/teacherPage.xhtml
@@ -76,7 +76,7 @@
                 <p:button id="testCmdButton"
                           icon="img-button-test" title="Tester séquence" 
                           outcome="/sequence/activity/spottingActivity.xhtml">
-                    <f:param name="idSequence" value="#{sequence.idSpottingActivity}"/>
+                    <f:param name="idSequence" value="#{sequence.idSequence}"/>
                 </p:button>
                 <p:commandButton id="editCmdButton" disabled="true"
                                  icon="img-button-edit" title="Modifier séquence">
