--- a/src/main/webapp/teacher/support.xhtml
+++ b/src/main/webapp/teacher/support.xhtml
@@ -6,6 +6,10 @@
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://java.sun.com/jsf/core">
+    
+    <f:metadata>
+        <f:event type="preRenderView" listener="#{supportBean.preRenderView()}"/>
+    </f:metadata>
 
     <ui:define name="title">
         Supports
